[package]
name = "roguelike_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bracket-lib = "0.8.7"
bracket-terminal = { version = "0.8.7", features = ["low_cpu"] }
grid = "0.13.0"
hecs = "0.10.4"
